# CafeSimulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: dish.h  exceptions.h  menuItem.h
includes/View/: cafeView.h
includes/controller/: DataService.h  OnlineService.h  databaseSimulationService.h  http_lib.hpp
includes/model/: cafeModel.h
includes/model/Customer/: customer.h  customersGroup.h  table.h
includes/model/Databases/: CustomEmployeesDb.cpp  CustomEmployeesDb.h  CustomTableDb.h  databaseService.h  iDatabase.h  menuDatabase.h  templateDatabase.h
includes/model/Employee/: Cook.h  DbWorkers.h  Employee.h  Exceptions.h  Price.h  Waiter.h  Worker.h  employeeExceptions.h
includes/model/MenuItem/: beverage.h  dessert.h  menuItem.h
includes/model/helpers/: Table.h  exceptions.h  price.h
src/: Table.cpp  beverage.cpp  cafeModel.cpp  cafeView.cpp  dessert.cpp  dish.cpp  exceptions.cpp  menuItem.cpp  price.cpp
src/Customer/: customer.cpp  customersGroup.cpp  table.cpp
src/Databases/: CustomEmployeesDb.cpp  CustomTableDb.cpp  databaseService.cpp  menuDatabase.cpp
src/Employee/: Cook.cpp  DbWorkers.cpp  Employee.cpp  Price.cpp  Waiter.cpp  Worker.cpp
src/Helpers/: price.cpp
src/MenuItem/: beverage.cpp  dessert.cpp  dish.cpp  exceptions.cpp  menuItem.cpp
src/controller/: DataService.cpp  OnlineService.cpp  databaseSimulationService.cpp
src/model/: cafeModel.cpp
src/model/Customer/: customer.cpp  customersGroup.cpp  table.cpp
src/model/Databases/: CustomEmployeesDb.cpp  CustomTableDb.cpp  menuDatabase.cpp
src/model/Employee/: Cook.cpp  DbWorkers.cpp  Employee.cpp  Waiter.cpp
src/model/Helpers/: price.cpp
src/model/MenuItem/: beverage.cpp  dessert.cpp  dish.cpp  employeeExceptions.cpp  menuItem.cpp
src/view/: cafeView.cpp
tests/: DbEmployeeTests.cpp  catch.hpp  customerTableTests.cpp  menuDatabaseTests.cpp  menuItemsTests.cpp  priceTests.cpp  simulationRunner.cpp  testEmployee.cpp
tests/integrationTests/: employeeSimulationTests.cpp  httpTests.cpp  simulationRunner.cpp
tests/unitTests/: DbEmployeeTests.cpp  customerTableTests.cpp  databaseScheme.cpp  employeeTests.cpp  menuDatabaseTests.cpp  menuItemsTests.cpp  priceTests.cpp
textFiles/: employeesDb.txt  menuDb.txt  tablesDb.txt
